--- a/css/layout.css
+++ b/css/layout.css
@@ -201,7 +201,7 @@ main{
         background: url(../img/background.jpg);
         background-repeat:no-repeat;
         background-size: contain;
-        opacity: .05;
+        opacity: .08;
         position: absolute;
         top: 0;
         left: 0;
